--- a/src/main/webapp/view/style/style.css
+++ b/src/main/webapp/view/style/style.css
@@ -1,9 +1,12 @@
 @charset "UTF-8";
 /* style.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: #f0f0f0;
     text-align: center;
+    font-weight: 300;
+    font-size: 15px;
+    color: #c4c3ca;
 }
 
 h1 {
@@ -152,17 +155,26 @@ th, td {
 
 /* Định dạng cho nút Xem chi tiết và Xóa */
 button {
-    background-color: #007BFF;
-    color: #fff;
+    background-color: #ffeba7;
+    color: #102770;
+    height: 44px;
     border: none;
-    border-radius: 3px;
-    padding: 5px 10px;
+    border-radius: 4px;
+    padding: 0px 30px;
     cursor: pointer;
     margin-right: 5px;
+    letter-spacing: 1px;
+    display: inline-flex;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
+    
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #102770;
+    color: #ffeba7;
+    box-shadow: 0 8px 24px 0 rgb(16, 39, 112, 0.2);
 }
 
 /* Định dạng cho nút Thêm Combo mới */
@@ -201,19 +213,13 @@ p {
     margin: 10px;
 }
 
-/* Định dạng cho hình ảnh món ăn */
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 10px auto;
-}
 
 /* Định dạng cho thẻ body */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
     text-align: center;
+    font-weight: 300;
+    font-size: 15px;
+    color: #c4c3ca;
 }
